# ICT

./: CMakeLists.txt  README.md  main.cpp
TASK_1_error_correction/: .gitignore
TASK_1_error_correction/files/: codeInput.txt
TASK_1_error_correction/include/: CodeWord.h  DecodeWord.h  FileFactory.h  Matrix.h
TASK_1_error_correction/source/: CodeWord.cpp  DecodeWord.cpp  FileFactory.cpp  FileService.cpp  Matrix.cpp
TASK_2_huffman_encoding/: coder.py  huffman.py  node.py  receiver.py  sender.py  test.py
TASK_2_huffman_encoding/files/: huffman_frequency.txt
files/: codeInput.txt  decodedInput.txt
include/: CodeWord.h  DecodeWord.h  FileFactory.h  FileService.h  Matrix.h  test.h
source/: CodeWord.cpp  DecodeWord.cpp  FileFactory.cpp  FileService.cpp  Matrix.cpp  test.cpp
